@@ -2,6 +2,7 @@
 -- v 3.4
 ----------------------------------------
 	- Add ability to specify devices by product and vendor IDs
+	- Add ability to specify devices by device node
 
 ----------------------------------------
 -- v 3.3
